# serializer version: 1
# name: test_fujitsu_decode_snapshot
  dict({
    'protocol': dict({
      'confidence': 0.99,
      'manufacturer': 'Fujitsu',
      'name': 'FUJITSU_AC',
    }),
    'state': dict({
      'fan': 'auto',
      'mode': 'auto',
      'power': 'on',
      'swing': 'off',
      'temperature': 17,
    }),
    'success': True,
    'timings': list([
      3294,
      1605,
      517,
      324,
      452,
      392,
      452,
      1216,
      452,
      392,
      452,
      1216,
      517,
      324,
      392,
      392,
      392,
      392,
      452,
      1216,
      452,
      1216,
      452,
      392,
      452,
      392,
      452,
      324,
      452,
      1216,
      392,
      1216,
      452,
      392,
      452,
      392,
      452,
      324,
      452,
      392,
      452,
      392,
      392,
      392,
      392,
      392,
      452,
      392,
      392,
      392,
      452,
      392,
      452,
      392,
      452,
      452,
      392,
      392,
      392,
      1216,
      452,
      324,
      452,
      392,
      452,
      324,
      452,
      392,
      452,
      392,
      392,
      392,
      452,
      452,
      392,
      1216,
      452,
      324,
      452,
      392,
      392,
      452,
      392,
      392,
      392,
      1216,
      452,
      1216,
      392,
      1216,
      392,
      1216,
      452,
      1216,
      452,
      1216,
      392,
      1216,
      392,
      1216,
      452,
      324,
      452,
      392,
      452,
      1216,
      392,
      392,
      452,
      392,
      392,
      392,
      452,
      392,
      452,
      392,
      452,
      392,
      452,
      392,
      452,
      392,
      392,
      1216,
      392,
      1216,
      392,
      392,
      452,
      392,
      452,
      1216,
      392,
      452,
      392,
      392,
      392,
      392,
      452,
      324,
      452,
      324,
      452,
      392,
      452,
      1216,
      452,
      324,
      452,
      392,
      452,
      392,
      452,
      392,
      392,
      392,
      392,
      452,
      392,
      392,
      392,
      452,
      392,
      452,
      324,
      452,
      392,
      392,
      392,
      452,
      392,
      392,
      392,
      452,
      392,
      452,
      392,
      452,
      392,
      452,
      392,
      392,
      392,
      392,
      452,
      392,
      392,
      392,
      392,
      452,
      452,
      324,
      517,
      324,
      452,
      324,
      452,
      392,
      392,
      452,
      392,
      392,
      392,
      452,
      392,
      392,
      452,
      392,
      452,
      324,
      452,
      392,
      452,
      392,
      392,
      392,
      452,
      392,
      392,
      392,
      392,
      392,
      452,
      324,
      452,
      392,
      452,
      392,
      392,
      392,
      452,
      392,
      392,
      392,
      392,
      392,
      452,
      1216,
      452,
      392,
      392,
      392,
      392,
      1216,
      392,
      1216,
      392,
      1216,
      392,
      1216,
      392,
      392,
      392,
      1216,
      452,
      392,
      452,
      392,
      392,
    ]),
  })
# ---
# name: test_fujitsu_generate_all_modes_24c_snapshot
  dict({
    'commands': dict({
      'auto': dict({
        'auto': dict({
          '24': 'D+QMQAaQAZABkAGQAZABsARABcAHgAtABUAXQANAC0ADQANAD0ADQAtAA0ADQANAA0ADQANAA0ADQANAA0ADQAPgFzfgCx9AE0ADQANAA0ADQANAA0ADQFdAA+ADC0APQANAA0ADQANAA0AjQANAC0ADQAtAA0ADQANAE0ADQAPgBw9AE0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQAPgD8NAF0AD',
        }),
      }),
      'cool': dict({
        'auto': dict({
          '24': 'D+QMQAaQAZABkAGQAZABsARABcAHgAtABUAXQANAC0ADQANAD0ADQAtAA0ADQANAA0ADQANAA0ADQANAA0ADQAPgFzfgCx9AE0ADQANAA0ADQANAA0ADQFdAA+ADC0APQANAA0ADQANAA0AjQANAC0ADQAtAA0ADQANAE0ADQANAD0ADQAtAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0AD4AvDQBNAAw==',
        }),
      }),
      'dry': dict({
        'auto': dict({
          '24': 'D+QMQAaQAZABkAGQAZABsARABcAHgAtABUAXQANAC0ADQANAD0ADQAtAA0ADQANAA0ADQANAA0ADQANAA0ADQAPgFzfgCx9AE0ADQANAA0ADQANAA0ADQFdAA+ADC0APQANAA0ADQANAA0AjQANAC0ADQAtAA0ADQANAE0ADQAPAD8AHQBNAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQLtAA0ALQANAA0ADQBNAAw==',
        }),
      }),
      'fan': dict({
        'auto': dict({
          '24': 'D+QMQAaQAZABkAGQAZABsARABcAHgAtABUAXQANAC0ADQANAD0ADQAtAA0ADQANAA0ADQANAA0ADQANAA0ADQAPgFzfgCx9AE0ADQANAA0ADQANAA0ADQFdAA+ADC0APQANAA0ADQANAA0AjQANAC0ADQAtAA0ADQANAE0ADQANAD0ADQANAD0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQAPgB8NAD0AD',
        }),
      }),
      'heat': dict({
        'auto': dict({
          '24': 'D+QMQAaQAZABkAGQAZABsARABcAHgAtABUAXQANAC0ADQANAD0ADQAtAA0ADQANAA0ADQANAA0ADQANAA0ADQAPgFzfgCx9AE0ADQANAA0ADQANAA0ADQFdAA+ADC0APQANAA0ADQANAA0AjQANAC0ADQAtAA0ADQANAE0ADQAPgAw/gAwtAG0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA8C3wAdAE0ADQA9AAw==',
        }),
      }),
      'off': 'D+QMQAaQAZABkAGQAZABsARABcAHgAtABUAXQANAC0ADQANAD0ADQAtAA0ADQANAA0ADQANAA0ADQANAA0ADQAPgFzfgCx/gCxNAS0ADwBtAB0ADQANAA0ADQAM=',
    }),
    'manufacturer': 'Fujitsu',
    'protocol': 'FUJITSU_AC',
    'success': True,
    'totalCommands': 6,
  })
# ---
# name: test_fujitsu_generate_common_temps_snapshot
  dict({
    'commands': dict({
      'cool': dict({
        'auto': dict({
          '22': 'D+QMQAaQAZABkAGQAZABsARABcAHgAtABUAXQANAC0ADQANAD0ADQAtAA0ADQANAA0ADQANAA0ADQANAA0ADQAPgFzfgCx9AE0ADQANAA0ADQANAA0ADQFdAA+ADC0APQANAA0ADQANAA0AjQANAC0ADQAtAA8ALQAdAA0ADQBdAA0ALQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0DDQANAA0ADQAPAFw==',
          '23': 'D+QMQAaQAZABkAGQAZABsARABcAHgAtABUAXQANAC0ADQANAD0ADQAtAA0ADQANAA0ADQANAA0ADQANAA0ADQAPgFzfgCx9AE0ADQANAA0ADQANAA0ADQFdAA+ADC0APQANAA0ADQANAA0AjQANAC0ADwAtAB0ADQBNAA0ADQA9AA0ALQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANA10AD',
          '24': 'D+QMQAaQAZABkAGQAZABsARABcAHgAtABUAXQANAC0ADQANAD0ADQAtAA0ADQANAA0ADQANAA0ADQANAA0ADQAPgFzfgCx9AE0ADQANAA0ADQANAA0ADQFdAA+ADC0APQANAA0ADQANAA0AjQANAC0ADQAtAA0ADQANAE0ADQANAD0ADQAtAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0AD4AvDQBNAAw==',
          '25': 'D+QMQAaQAZABkAGQAZABsARABcAHgAtABUAXQANAC0ADQANAD0ADQAtAA0ADQANAA0ADQANAA0ADQANAA0ADQAPgFzfgCx9AE0ADQANAA0ADQANAA0ADQFdAA+ADC0APQANAA0ADQANAA0AjQANAC0AD4AML4AcPQBtAA0AXQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0AD4AfHQA9AAw==',
          '26': 'D+QMQAaQAZABkAGQAZABsARABcAHgAtABUAXQANAC0ADQANAD0ADQAtAA0ADQANAA0ADQANAA0ADQANAA0ADQAPgFzfgCx9AE0ADQANAA0ADQANAA0ADQFdAA+ADC0APQANAA0ADQANAA0AjQANAC0ADQAtAA0ALQAPgAwtAC0ADQBdAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQMNAA0ALQANAA0APQAM=',
        }),
        'high': dict({
          '22': 'D+QMQAaQAZABkAGQAZABsARABcAHgAtABUAXQANAC0ADQANAD0ADQAtAA0ADQANAA0ADQANAA0ADQANAA0ADQAPgFzfgCx9AE0ADQANAA0ADQANAA0ADQFdAA+ADC0APQANAA0ADQANAA0AjQANAC0ADQAtAA8ALQAdAA0ADQBdAA0ALQANAA0ADQANAA0AD4BcfQCNAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0CfQANAA0ADQANAA8Ab',
          '23': 'D+QMQAaQAZABkAGQAZABsARABcAHgAtABUAXQANAC0ADQANAD0ADQAtAA0ADQANAA0ADQANAA0ADQANAA0ADQAPgFzfgCx9AE0ADQANAA0ADQANAA0ADQFdAA+ADC0APQANAA0ADQANAA0AjQANAC0ADwAtAB0ADQBNAA0ADQA9AA0ALQANAA0ADQANAA0AD4BcfQCNAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA+APn0AXQAM=',
          '24': 'D+QMQAaQAZABkAGQAZABsARABcAHgAtABUAXQANAC0ADQANAD0ADQAtAA0ADQANAA0ADQANAA0ADQANAA0ADQAPgFzfgCx9AE0ADQANAA0ADQANAA0ADQFdAA+ADC0APQANAA0ADQANAA0AjQANAC0ADQAtAA0ADQANAE0ADQANAD0ADQAtAA0ADQANAA0ADQAPgFx9AI0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQJ9AA0ALQANAA0ADQBNAAw==',
          '25': 'D+QMQAaQAZABkAGQAZABsARABcAHgAtABUAXQANAC0ADQANAD0ADQAtAA0ADQANAA0ADQANAA0ADQANAA0ADQAPgFzfgCx9AE0ADQANAA0ADQANAA0ADQFdAA+ADC0APQANAA0ADQANAA0AjQANAC0AD4AML4AcPQBtAA0AXQANAA0ADQANAA0AD4BcfQCNAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA8CfwAdAE0ADQA9AAw==',
          '26': 'D+QMQAaQAZABkAGQAZABsARABcAHgAtABUAXQANAC0ADQANAD0ADQAtAA0ADQANAA0ADQANAA0ADQANAA0ADQAPgFzfgCx9AE0ADQANAA0ADQANAA0ADQFdAA+ADC0APQANAA0ADQANAA0AjQANAC0ADQAtAA0ALQAPgAwtAC0ADQBdAA0ADQANAA0ADQAPgFx9AI0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQJ9AA0ADQA9AA0ADQA9AAw==',
        }),
        'low': dict({
          '22': 'D+QMQAaQAZABkAGQAZABsARABcAHgAtABUAXQANAC0ADQANAD0ADQAtAA0ADQANAA0ADQANAA0ADQANAA0ADQAPgFzfgCx9AE0ADQANAA0ADQANAA0ADQFdAA+ADC0APQANAA0ADQANAA0AjQANAC0ADQAtAA8ALQAdAA0ADQBdAA0ALQANAA0ADQANAA0ADQB9AA0ALQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQAPgD5tAF0AD',
          '23': 'D+QMQAaQAZABkAGQAZABsARABcAHgAtABUAXQANAC0ADQANAD0ADQAtAA0ADQANAA0ADQANAA0ADQANAA0ADQAPgFzfgCx9AE0ADQANAA0ADQANAA0ADQFdAA+ADC0APQANAA0ADQANAA0AjQANAC0ADwAtAB0ADQBNAA0ADQA9AA0ALQANAA0ADQANAA0ADQB9AA0ALQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAm0ADQAtAA0ADQANAE0AD',
          '24': 'D+QMQAaQAZABkAGQAZABsARABcAHgAtABUAXQANAC0ADQANAD0ADQAtAA0ADQANAA0ADQANAA0ADQANAA0ADQAPgFzfgCx9AE0ADQANAA0ADQANAA0ADQFdAA+ADC0APQANAA0ADQANAA0AjQANAC0ADQAtAA0ADQANAE0ADQANAD0ADQAtAA0ADQANAA0ADQANAH0ADQAtAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA8CbwAdAE0ADQA9AAw==',
          '25': 'D+QMQAaQAZABkAGQAZABsARABcAHgAtABUAXQANAC0ADQANAD0ADQAtAA0ADQANAA0ADQANAA0ADQANAA0ADQAPgFzfgCx9AE0ADQANAA0ADQANAA0ADQFdAA+ADC0APQANAA0ADQANAA0AjQANAC0AD4AML4AcPQBtAA0AXQANAA0ADQANAA0ADQB9AA0ALQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAm0ADQANAD0ADQANAD0AD',
          '26': 'D+QMQAaQAZABkAGQAZABsARABcAHgAtABUAXQANAC0ADQANAD0ADQAtAA0ADQANAA0ADQANAA0ADQANAA0ADQAPgFzfgCx9AE0ADQANAA0ADQANAA0ADQFdAA+ADC0APQANAA0ADQANAA0AjQANAC0ADQAtAA0ALQAPgAwtAC0ADQBdAA0ADQANAA0ADQANAH0ADQAtAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA+ADm+ADC0ALQAM=',
        }),
      }),
      'heat': dict({
        'auto': dict({
          '22': 'D+QMQAaQAZABkAGQAZABsARABcAHgAtABUAXQANAC0ADQANAD0ADQAtAA0ADQANAA0ADQANAA0ADQANAA0ADQAPgFzfgCx9AE0ADQANAA0ADQANAA0ADQFdAA+ADC0APQANAA0ADQANAA0AjQANAC0ADQAtAA8ALQAdAA0ADwBfgAwtAC0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0AD4APDQA9AA0ADQBdAAw==',
          '23': 'D+QMQAaQAZABkAGQAZABsARABcAHgAtABUAXQANAC0ADQANAD0ADQAtAA0ADQANAA0ADQANAA0ADQANAA0ADQAPgFzfgCx9AE0ADQANAA0ADQANAA0ADQFdAA+ADC0APQANAA0ADQANAA0AjQANAC0ADwAtAB0ADQBNAA0AD4AMP4AMLQBtAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAt0ADQAtAA0ADQANAE0AD',
          '24': 'D+QMQAaQAZABkAGQAZABsARABcAHgAtABUAXQANAC0ADQANAD0ADQAtAA0ADQANAA0ADQANAA0ADQANAA0ADQAPgFzfgCx9AE0ADQANAA0ADQANAA0ADQFdAA+ADC0APQANAA0ADQANAA0AjQANAC0ADQAtAA0ADQANAE0ADQAPgAw/gAwtAG0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA8C3wAdAE0ADQA9AAw==',
          '25': 'D+QMQAaQAZABkAGQAZABsARABcAHgAtABUAXQANAC0ADQANAD0ADQAtAA0ADQANAA0ADQANAA0ADQANAA0ADQAPgFzfgCx9AE0ADQANAA0ADQANAA0ADQFdAA+ADC0APQANAA0ADQANAA0AjQANAC0AD4AML4AcP4AMb4AMLQCdAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAt0ADQANAD0ADQANAD0AD',
          '26': 'D+QMQAaQAZABkAGQAZABsARABcAHgAtABUAXQANAC0ADQANAD0ADQAtAA0ADQANAA0ADQANAA0ADQANAA0ADQAPgFzfgCx9AE0ADQANAA0ADQANAA0ADQFdAA+ADC0APQANAA0ADQANAA0AjQANAC0ADQAtAA0ALQAPgAwvgAwvgAwtAJ0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA+ADt+ADC0ALQAM=',
        }),
        'high': dict({
          '22': 'D+QMQAaQAZABkAGQAZABsARABcAHgAtABUAXQANAC0ADQANAD0ADQAtAA0ADQANAA0ADQANAA0ADQANAA0ADQAPgFzfgCx9AE0ADQANAA0ADQANAA0ADQFdAA+ADC0APQANAA0ADQANAA0AjQANAC0ADQAtAA8ALQAdAA0ADwBfgAwtAC0ADQANAA+ADI0APQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQAPgC6NAE0AD',
          '23': 'D+QMQAaQAZABkAGQAZABsARABcAHgAtABUAXQANAC0ADQANAD0ADQAtAA0ADQANAA0ADQANAA0ADQANAA0ADQAPgFzfgCx9AE0ADQANAA0ADQANAA0ADQFdAA+ADC0APQANAA0ADQANAA0AjQANAC0ADwAtAB0ADQBNAA0AD4AMP4AMLQBtAA0AD4A8XQBtAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0AD4AenQA9AAw==',
          '24': 'D+QMQAaQAZABkAGQAZABsARABcAHgAtABUAXQANAC0ADQANAD0ADQAtAA0ADQANAA0ADQANAA0ADQANAA0ADQAPgFzfgCx9AE0ADQANAA0ADQANAA0ADQFdAA+ADC0APQANAA0ADQANAA0AjQANAC0ADQAtAA0ADQANAE0ADQAPgAw/gAwtAG0ADQAPgDxdAG0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQKNAA0ALQANAA0APQAM=',
          '25': 'D+QMQAaQAZABkAGQAZABsARABcAHgAtABUAXQANAC0ADQANAD0ADQAtAA0ADQANAA0ADQANAA0ADQANAA0ADQAPgFzfgCx9AE0ADQANAA0ADQANAA0ADQFdAA+ADC0APQANAA0ADQANAA0AjQANAC0AD4AML4AcP4AMb4AMLQCdAA0AD4A8XQBtAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQAPgA6tAC0AD',
          '26': 'D+QMQAaQAZABkAGQAZABsARABcAHgAtABUAXQANAC0ADQANAD0ADQAtAA0ADQANAA0ADQANAA0ADQANAA0ADQAPgFzfgCx9AE0ADQANAA0ADQANAA0ADQFdAA+ADC0APQANAA0ADQANAA0AjQANAC0ADQAtAA0ALQAPgAwvgAwvgAwtAJ0ADQAPgDxdAG0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADwKPAB8ATQA8=',
        }),
        'low': dict({
          '22': 'D+QMQAaQAZABkAGQAZABsARABcAHgAtABUAXQANAC0ADQANAD0ADQAtAA0ADQANAA0ADQANAA0ADQANAA0ADQAPgFzfgCx9AE0ADQANAA0ADQANAA0ADQFdAA+ADC0APQANAA0ADQANAA0AjQANAC0ADQAtAA8ALQAdAA0ADwBfgAwtAC0ADQANAA0AjQANAC0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA+AHo0APQAM=',
          '23': 'D+QMQAaQAZABkAGQAZABsARABcAHgAtABUAXQANAC0ADQANAD0ADQAtAA0ADQANAA0ADQANAA0ADQANAA0ADQAPgFzfgCx9AE0ADQANAA0ADQANAA0ADQFdAA+ADC0APQANAA0ADQANAA0AjQANAC0ADwAtAB0ADQBNAA0AD4AMP4AMLQBtAA0ADQBdAA0ALQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0CfQANAC0ADQANAD0AD',
          '24': 'D+QMQAaQAZABkAGQAZABsARABcAHgAtABUAXQANAC0ADQANAD0ADQAtAA0ADQANAA0ADQANAA0ADQANAA0ADQAPgFzfgCx9AE0ADQANAA0ADQANAA0ADQFdAA+ADC0APQANAA0ADQANAA0AjQANAC0ADQAtAA0ADQANAE0ADQAPgAw/gAwtAG0ADQANAF0ADQAtAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA+ADp0ALQAM=',
          '25': 'D+QMQAaQAZABkAGQAZABsARABcAHgAtABUAXQANAC0ADQANAD0ADQAtAA0ADQANAA0ADQANAA0ADQANAA0ADQAPgFzfgCx9AE0ADQANAA0ADQANAA0ADQFdAA+ADC0APQANAA0ADQANAA0AjQANAC0AD4AML4AcP4AMb4AMLQCdAA0ADQBdAA0ALQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA8CfwAfAE0AP',
          '26': 'D+QMQAaQAZABkAGQAZABsARABcAHgAtABUAXQANAC0ADQANAD0ADQAtAA0ADQANAA0ADQANAA0ADQANAA0ADQAPgFzfgCx9AE0ADQANAA0ADQANAA0ADQFdAA+ADC0APQANAA0ADQANAA0AjQANAC0ADQAtAA0ALQAPgAwvgAwvgAwtAJ0ADQANAF0ADQAtAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAo0ADQAtAA0ALQAM=',
        }),
      }),
      'off': 'D+QMQAaQAZABkAGQAZABsARABcAHgAtABUAXQANAC0ADQANAD0ADQAtAA0ADQANAA0ADQANAA0ADQANAA0ADQAPgFzfgCx/gCxNAS0ADwBtAB0ADQANAA0ADQAM=',
    }),
    'manufacturer': 'Fujitsu',
    'protocol': 'FUJITSU_AC',
    'success': True,
    'totalCommands': 31,
  })
# ---
# name: test_fujitsu_generate_cool_auto_snapshot
  dict({
    'commands': dict({
      'cool': dict({
        'auto': dict({
          '18': 'D+QMQAaQAZABkAGQAZABsARABcAHgAtABUAXQANAC0ADQANAD0ADQAtAA0ADQANAA0ADQANAA0ADQANAA0ADQAPgFzfgCx9AE0ADQANAA0ADQANAA0ADQFdAA+ADC0APQANAA0ADQANAA0AjQANAC0ADQAtAA0ALQANAA0ADQANAF0ADQAtAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQMNAA+ADC8AL',
          '19': 'D+QMQAaQAZABkAGQAZABsARABcAHgAtABUAXQANAC0ADQANAD0ADQAtAA0ADQANAA0ADQANAA0ADQANAA0ADQAPgFzfgCx9AE0ADQANAA0ADQANAA0ADQFdAA+ADC0APQANAA0ADQANAA0AjQANAC0ADwAvAB0ATQANAA0ATQANAC0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQMtAA0ADwA8=',
          '20': 'D+QMQAaQAZABkAGQAZABsARABcAHgAtABUAXQANAC0ADQANAD0ADQAtAA0ADQANAA0ADQANAA0ADQANAA0ADQAPgFzfgCx9AE0ADQANAA0ADQANAA0ADQFdAA+ADC0APQANAA0ADQANAA0AjQANAC0ADQAtAA0ADQA9AA0ADQANAE0ADQAtAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADwMNAB0ADQAPAFw==',
          '21': 'D+QMQAaQAZABkAGQAZABsARABcAHgAtABUAXQANAC0ADQANAD0ADQAtAA0ADQANAA0ADQANAA0ADQANAA0ADQAPgFzfgCx9AE0ADQANAA0ADQANAA0ADQFdAA+ADC0APQANAA0ADQANAA0AjQANAC0AD4AML4AMLwBvgBxNAF0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0DHQANAA0ADwBM=',
          '22': 'D+QMQAaQAZABkAGQAZABsARABcAHgAtABUAXQANAC0ADQANAD0ADQAtAA0ADQANAA0ADQANAA0ADQANAA0ADQAPgFzfgCx9AE0ADQANAA0ADQANAA0ADQFdAA+ADC0APQANAA0ADQANAA0AjQANAC0ADQAtAA8ALQAdAA0ADQBdAA0ALQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0DDQANAA0ADQAPAFw==',
          '23': 'D+QMQAaQAZABkAGQAZABsARABcAHgAtABUAXQANAC0ADQANAD0ADQAtAA0ADQANAA0ADQANAA0ADQANAA0ADQAPgFzfgCx9AE0ADQANAA0ADQANAA0ADQFdAA+ADC0APQANAA0ADQANAA0AjQANAC0ADwAtAB0ADQBNAA0ADQA9AA0ALQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANA10AD',
          '24': 'D+QMQAaQAZABkAGQAZABsARABcAHgAtABUAXQANAC0ADQANAD0ADQAtAA0ADQANAA0ADQANAA0ADQANAA0ADQAPgFzfgCx9AE0ADQANAA0ADQANAA0ADQFdAA+ADC0APQANAA0ADQANAA0AjQANAC0ADQAtAA0ADQANAE0ADQANAD0ADQAtAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0AD4AvDQBNAAw==',
          '25': 'D+QMQAaQAZABkAGQAZABsARABcAHgAtABUAXQANAC0ADQANAD0ADQAtAA0ADQANAA0ADQANAA0ADQANAA0ADQAPgFzfgCx9AE0ADQANAA0ADQANAA0ADQFdAA+ADC0APQANAA0ADQANAA0AjQANAC0AD4AML4AcPQBtAA0AXQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0AD4AfHQA9AAw==',
          '26': 'D+QMQAaQAZABkAGQAZABsARABcAHgAtABUAXQANAC0ADQANAD0ADQAtAA0ADQANAA0ADQANAA0ADQANAA0ADQAPgFzfgCx9AE0ADQANAA0ADQANAA0ADQFdAA+ADC0APQANAA0ADQANAA0AjQANAC0ADQAtAA0ALQAPgAwtAC0ADQBdAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQMNAA0ALQANAA0APQAM=',
          '27': 'D+QMQAaQAZABkAGQAZABsARABcAHgAtABUAXQANAC0ADQANAD0ADQAtAA0ADQANAA0ADQANAA0ADQANAA0ADQAPgFzfgCx9AE0ADQANAA0ADQANAA0ADQFdAA+ADC0APQANAA0ADQANAA0AjQANAC0ADwAvAB8AHwBvgAw9AE0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQAPgA8tAC0AD',
          '28': 'D+QMQAaQAZABkAGQAZABsARABcAHgAtABUAXQANAC0ADQANAD0ADQAtAA0ADQANAA0ADQANAA0ADQANAA0ADQAPgFzfgCx9AE0ADQANAA0ADQANAA0ADQFdAA+ADC0APQANAA0ADQANAA0AjQANAC0ADQAtAA0ADwA9AB0ADQBNAA0ALQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA8DDwAfAE0AP',
          '29': 'D+QMQAaQAZABkAGQAZABsARABcAHgAtABUAXQANAC0ADQANAD0ADQAtAA0ADQANAA0ADQANAA0ADQANAA0ADQAPgFzfgCx9AE0ADQANAA0ADQANAA0ADQFdAA+ADC0APQANAA0ADQANAA0AjQANAC0AD4AMLQAtAA0AXQANAC0ADQAtAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAx0ADQAtAA0ALQAM=',
          '30': 'D+QMQAaQAZABkAGQAZABsARABcAHgAtABUAXQANAC0ADQANAD0ADQAtAA0ADQANAA0ADQANAA0ADQANAA0ADQAPgFzfgCx9AE0ADQANAA0ADQANAA0ADQFdAA+ADC0APQANAA0ADQANAA0AjQANAC0ADQAtAA+ADC0ALQANAF0ADQAtAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQMNAA0ADQA9AA0ALQAM=',
        }),
      }),
      'off': 'D+QMQAaQAZABkAGQAZABsARABcAHgAtABUAXQANAC0ADQANAD0ADQAtAA0ADQANAA0ADQANAA0ADQANAA0ADQAPgFzfgCx/gCxNAS0ADwBtAB0ADQANAA0ADQAM=',
    }),
    'manufacturer': 'Fujitsu',
    'protocol': 'FUJITSU_AC',
    'success': True,
    'totalCommands': 14,
  })
# ---
# name: test_fujitsu_generate_fan_speeds_24c_cool_snapshot
  dict({
    'commands': dict({
      'cool': dict({
        'auto': dict({
          '24': 'D+QMQAaQAZABkAGQAZABsARABcAHgAtABUAXQANAC0ADQANAD0ADQAtAA0ADQANAA0ADQANAA0ADQANAA0ADQAPgFzfgCx9AE0ADQANAA0ADQANAA0ADQFdAA+ADC0APQANAA0ADQANAA0AjQANAC0ADQAtAA0ADQANAE0ADQANAD0ADQAtAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0AD4AvDQBNAAw==',
        }),
        'high': dict({
          '24': 'D+QMQAaQAZABkAGQAZABsARABcAHgAtABUAXQANAC0ADQANAD0ADQAtAA0ADQANAA0ADQANAA0ADQANAA0ADQAPgFzfgCx9AE0ADQANAA0ADQANAA0ADQFdAA+ADC0APQANAA0ADQANAA0AjQANAC0ADQAtAA0ADQANAE0ADQANAD0ADQAtAA0ADQANAA0ADQAPgFx9AI0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQJ9AA0ALQANAA0ADQBNAAw==',
        }),
        'low': dict({
          '24': 'D+QMQAaQAZABkAGQAZABsARABcAHgAtABUAXQANAC0ADQANAD0ADQAtAA0ADQANAA0ADQANAA0ADQANAA0ADQAPgFzfgCx9AE0ADQANAA0ADQANAA0ADQFdAA+ADC0APQANAA0ADQANAA0AjQANAC0ADQAtAA0ADQANAE0ADQANAD0ADQAtAA0ADQANAA0ADQANAH0ADQAtAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA8CbwAdAE0ADQA9AAw==',
        }),
        'medium': dict({
          '24': 'D+QMQAaQAZABkAGQAZABsARABcAHgAtABUAXQANAC0ADQANAD0ADQAtAA0ADQANAA0ADQANAA0ADQANAA0ADQAPgFzfgCx9AE0ADQANAA0ADQANAA0ADQFdAA+ADC0APQANAA0ADQANAA0AjQANAC0ADQAtAA0ADQANAE0ADQANAD0ADQAtAA0ADQANAA0ADQANAA+AbI0AnQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQAPgB6NAD0AD',
        }),
        'quiet': dict({
          '24': 'D+QMQAaQAZABkAGQAZABsARABcAHgAtABUAXQANAC0ADQANAD0ADQAtAA0ADQANAA0ADQANAA0ADQANAA0ADQAPgFzfgCx9AE0ADQANAA0ADQANAA0ADQFdAA+ADC0APQANAA0ADQANAA0AjQANAC0ADQAtAA0ADQANAE0ADQANAD0ADQAtAA0ADQANAA0ADQANAA0AD4B8nQCtAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0CbQANAC0ADQANAD0AD',
        }),
      }),
      'off': 'D+QMQAaQAZABkAGQAZABsARABcAHgAtABUAXQANAC0ADQANAD0ADQAtAA0ADQANAA0ADQANAA0ADQANAA0ADQAPgFzfgCx/gCxNAS0ADwBtAB0ADQANAA0ADQAM=',
    }),
    'manufacturer': 'Fujitsu',
    'protocol': 'FUJITSU_AC',
    'success': True,
    'totalCommands': 6,
  })
# ---
# name: test_fujitsu_identify_snapshot
  dict({
    'capabilities': dict({
      'fanSpeeds': list([
        'auto',
        'low',
        'medium',
        'high',
      ]),
      'features': list([
        'swing',
      ]),
      'modes': list([
        'cool',
        'heat',
        'dry',
        'fan',
        'auto',
      ]),
      'tempRange': dict({
        'max': 30,
        'min': 16,
        'unit': 'celsius',
      }),
    }),
    'detectedState': dict({
      'fan': 'auto',
      'mode': 'auto',
      'power': 'on',
      'swing': 'off',
      'temperature': 17,
    }),
    'manufacturer': 'Fujitsu',
    'modelFamily': None,
    'protocol': 'FUJITSU_AC',
    'success': True,
  })
# ---
# name: test_fujitsu_roundtrip_validation
  dict({
    'identified_manufacturer': 'Fujitsu',
    'identified_protocol': 'FUJITSU_AC',
    'original_code': 'Ed4MRQYFAkQBxAGIAcQBwATEAYAHQBMAiKABA8QBwASAA0ALQAMGRAHEAcAEiCADA8QBiAGAA0ATgAvAAUAPQAFAB4ADAsQBiGABQDfAL8AHAIhgAQDEIAEBiAHgAR8BiAFAD0ABQBMBwARAB0ADQAtAA0ALQAMBxAHARwjABIgBiAHEAYhgAUAH4AcDAYgBQCNAAwGIAYAbQAsCxAGIoAEBxAFAS0ADQAsDwATEAcALQA8AiKABwAlABwHEAYAhQAECxAGIYAFAB+ADA4ABQBGAAQDEIAEBRAFBZ0AHAsQBiCABgAUBiAGAB0AFAcQBgBsCxAGIYAHAB0ABAcQB4BMbQLcAiKABAcAE4AUDQAELwATEAYgBxAGIAYgB',
    'original_code_matches_generated': False,
    'original_code_timings_count': 259,
    'sample_decoded_protocol': dict({
      'confidence': 1.0,
      'manufacturer': 'Fujitsu',
      'name': 'FUJITSU_AC',
    }),
    'sample_generated_code_cool_24_auto': 'D+QMQAaQAZABkAGQAZABsARABcAHgAtABUAXQANAC0ADQANAD0ADQAtAA0ADQANAA0ADQANAA0ADQANAA0ADQAPgFzfgCx9AE0ADQANAA0ADQANAA0ADQFdAA+ADC0APQANAA0ADQANAA0AjQANAC0ADQAtAA0ADQANAE0ADQANAD0ADQAtAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0ADQANAA0AD4AvDQBNAAw==',
    'sample_generated_timings_count': 259,
    'total_generated_commands': 301,
    'workflow_validation': dict({
      'both_same_protocol': True,
      'generated_decodes_correctly': True,
      'original_identifies_correctly': True,
    }),
  })
# ---
